@@ -1,4 +1,4 @@
-DIST github-pages-publish-0.1.tar.gz 3233 SHA256 97f381a3b9d08db533b857cb9d39b0fa8bae8bcb8df23a2a96f6adeb8ad71700 SHA512 46489d22f893840196b4ebf9b3a035534073565010aa17eff6ca3387c3113043b89d122876b174278c35891cf512c1254af732d97d2f731916a9280536bef40a WHIRLPOOL f660249341dd4b3cb8f0a00d85e8239ccaa3a6697bb36d1585734812a29345b6294a7839cf4c86dfdfcef2086ac5cabd6cd98318bcf5c36d3b45b6a141bc09b9
-EBUILD github-pages-publish-0.1.ebuild 963 SHA256 4f613cc6cbf485cd887d2dd55ca5a4b9e0835f5a45234de06752d5de3c35bd33 SHA512 e29fd81d268a46e792a47551e05bb9c70d0291a5bbbb76049cea8fe14771a7a834cf73b3ae99c2547e3a35666424047d9ac5c7e41976b2e24fe0397c2f8feedd WHIRLPOOL a4c538777da7341307807a7b366f2191e13a8d9e1c7d07ace351cd83cbfc972555de33bfcef87e4102bf058bd6f92c54f327218efa3c1538f184ae942852cbbb
-MISC ChangeLog 406 SHA256 4aa608986ca82dcfdaed0de47cae22d9f799591ce7b829e9b827e16d07b7b987 SHA512 42ffe1a6401ffb41b1c5d36d5933589703dd526c459afa04c3df3940a3281c933db0a541d00f0e85cc03aa90968505058e194660181e4a33e2ef0e553014a1e7 WHIRLPOOL 2ea0ce00eeab5beb1ccbc80c8c9c284193759d0a5cd8f8b8118d17546f578b9272c810d7aef537db924d82235d93bf34c5bf129acc62adb28777dd388c9eab74
+DIST github-pages-publish-0.1.1.tar.gz 3294 SHA256 2df1dfcd31f0ab3b24704f88d7329bd908464f22590238c95fb41d50a658263e SHA512 b20489c659389a41ac716a3dbb9886e60731e4005f6d827c1f31ad135926b7263d1e6a4db18f6f9b7c8737481fe1c79375d41d41cf37fd844163aefcf1038683 WHIRLPOOL d9f58d5d24a1fa12b0e2071491040cabcae1d7012c42aca9d5a65b96389e48384bcde7bb2fd8609e8212c81947290dc8b7976fec818f0730cd1751932a92e8d3
+EBUILD github-pages-publish-0.1.1.ebuild 965 SHA256 91de4601e4a688147c98eb0eba6587b457cf734c43b76c9d89443228b8cf0270 SHA512 67489ae23dde77a168ff92e475ecbc2c8b4a97705e549100532730bd20a987e5cc0652f2c43602e7cc79b18220df026a3eca40cc09235ba64202b80562d8d1b4 WHIRLPOOL dc9d135d33765cd908f1f75690e0974dd12c96ab0eeb2fe482062aae8bebc3973ce4ca92d5a17af037062c2bdcbdbf545fe1933a2ff5ab20a8b24deb3082db8b
+MISC ChangeLog 598 SHA256 5436476831760ec18c90c3bea1e15f5cdfb7e7b0ff04dbe9c56a8847aa096639 SHA512 e4401a350becb3a22ba727fbfb99c5d805bf9bfe5e95d2beb347c6804ad169e45642547d5497625b4de376c7ae87aff05fa3628e3ec7348fd23ceca146008689 WHIRLPOOL e56500a9c6f7cf393355fc666409a59a8550df81a562c6e52e212fb1aca6b6e7e4622a066568918813c58df9a57a193aa7bb1ca6db6122571ed103a5e4b9b261
 MISC metadata.xml 602 SHA256 b3d1f3efd753f8e060edf6dda22f007ebcf5d16a2698eb814f3ba4ed9209ddb6 SHA512 0b60d771200c3192956a795862aba72d085e3f4ba75ef327dd9daf9ddbdd329812079f1c10da8abcbc14889e63e1732ca49d5d9608e8231731c513bbeeba7e15 WHIRLPOOL d5125533261c163ebd006934d579f373e1f3b1b30da7e93e3196bbba01ea07010a5779464e1bb9138b94c908a448d287151f59bb4d6bd443b90308caa82e79e0
