@@ -9,6 +9,6 @@ LICENSE=BSD
 RDEPEND=>=dev-python/pygit2-0.20.0 virtual/python-argparse python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) dev-lang/python-exec:=[python_targets_python2_7(-)?,-python_single_target_python2_7(-)]
 REQUIRED_USE=|| ( python_targets_python2_7 )
 SLOT=0
-SRC_URI=mirror://pypi/g/github-pages-publish/github-pages-publish-0.1.tar.gz
+SRC_URI=mirror://pypi/g/github-pages-publish/github-pages-publish-0.1.1.tar.gz
 _eclasses_=distutils-r1	59b53892e6e67d8f2c5592e8a5ff3aac	eutils	d04e3933e3ec7e338a0561a6b0ae66b1	multibuild	56d4120419072116417e8de1bd1040ff	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	c2d96fb38f2596209e98fceda58ba1ed	python-r1	3bb814ab7959a36067101a6bef683b6f	python-utils-r1	49ee0ca5e1019d8f256a23692dad2642	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=fce92d7b7b5d808f120799bea169abaf
+_md5_=eb2a888f3bdadcf57e5752a2d2cb2f90
