@@ -10,4 +10,4 @@ REQUIRED_USE=ppc? ( binary ) ppc64? ( binary )
 SLOT=0
 SRC_URI=http://code.coreboot.org/p/seabios/downloads/get/seabios-1.7.3.tar.gz http://code.coreboot.org/p/seabios/downloads/get/bios.bin-1.7.3.gz http://dev.gentoo.org/~cardoe/distfiles/seabios-1.7.3.tar.gz http://dev.gentoo.org/~cardoe/distfiles/bios.bin-1.7.3.gz
 _eclasses_=eutils	d04e3933e3ec7e338a0561a6b0ae66b1	multilib	892e597faee02a5b94eb02ab512e7622	python-any-r1	08d3455b23110d650f173ab0a090818b	python-utils-r1	49ee0ca5e1019d8f256a23692dad2642	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=3ce4b6075a792d248201c05e8ac63ca7
+_md5_=caa6b4135bb4e893904b2c22a52911e2
