@@ -1,5 +1,17 @@
-EBUILD perl-File-Temp-0.220.0-r2.ebuild 803 SHA256 ab91ce525586e8797b31d6b972a9cec99682650313b10a44c9bf15e04fcce445 SHA512 678173db1ef152a882576473d5dd1efb9d10b7841c73724dd7ceec93c0a1021f22553ea0080b5228c32b05d864ceb787f045cc1525cb2d8cd8101e28e6c214a1 WHIRLPOOL 339f95977322728d74b0f3479b2f13e464206d240a89e11244597cffdf66a4b9b21b34af695a2303555b7226d8c692958da99ba46c0be38f98b706fd442dd9b9
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+EBUILD perl-File-Temp-0.220.0-r2.ebuild 781 SHA256 7c7501df6aea10373689372e10d70b25e57b470d0b8c92c04cab2932b5e5c081 SHA512 0da0c251cb880ebe4e3aec71185a41a11e10db102b112c0ca0e66a9ce151ceaccfa6427a4b0e823e3125294545edb516d19588e020fcb47daf09d52d3dafb448 WHIRLPOOL 5e95bea02d4d67d6812248a03ff64ee9683e28363b83f649fa9a776d040f92fdff4b88bd05212d22eacbceec187e7c42abb7279da21b14f70d723ee0f53c39b6
 EBUILD perl-File-Temp-0.230.100.ebuild 704 SHA256 f9790ef6fa5f05c1136345ceab0035461ba06a773fd147a1643aa2fbca897ca6 SHA512 5a3bb6f65a21247b966a8001fd67d947aee92294b925b53dab33ccb548e9ef3e9dec15e33845893170f7c6448ddc2a4e912eb0a4b5baaf4f7c86119dc3c4f760 WHIRLPOOL 2a6a756aea74aea3d392b938416a52bcc77396afa7bcfbc2b9cea763dfe96de6bc757b1ae58fffea84c9b0b4aeb32f20ef6f47e57c25e3a30bc52b54aeb47941
 EBUILD perl-File-Temp-0.230.400.ebuild 699 SHA256 9c12e003b19163dc8f6c4ccdff99d5b451ec490b904f84b0830dd10974ca2aaa SHA512 0cefc3130f9f0e92d72d1428a03d9ddee06420ba271939080f1bf67b011389ab0b205090c9c8ea0c54889841aae28dd51117e85b97236f06ac6e9246a2dea655 WHIRLPOOL da6669571c3c5815ba576c97dbee0b340c8fb4e836ef05d0841431822987a6da7aad029d741efb45ac897e289dd0488fe62655e3e3b61d599b908c85b914fbfc
-MISC ChangeLog 7706 SHA256 d03319c77f08683b01a2f414c678266f24e90ce4e7d70fca4743ace82b1539c7 SHA512 b94ddb4215b6ea8ca364517258da1b5868c3ea7da0f12afa8505f6e7a4d5c5aa695309411e9369f634d8657717ad276f7439b9e1aebc4bfd241486a8e78e6c61 WHIRLPOOL f73c8726043ef75c65033239b523e8a63d8ee28d9e8cf98dcb0444d9ff6c4bdb8efef0a2cc03a840e086a51db5e0f216ad269f1239a1e8246f9178f50dbb0c78
+MISC ChangeLog 7822 SHA256 d092eae49ef9169f8a2bc2abcc9d0a628df5cbdc88d850dbdbf8bd75cbc21132 SHA512 b6f5772ca45a5e1da28248b8eaacb8d7f33c65ae23dd40f57e11657e7dd8b79901ccf2e6d7c697126a274c7700037d54b8020b7c20ba2bcf2b1bda58e6b17b1f WHIRLPOOL 2372985655b8421257e75922b8aa564d03a72e5f1a60d4c3bfc6b1b74c22f9ee11148bd9752bb311ca1151132bb5643338c272f52c1b95ac1fb4515203d3f41d
 MISC metadata.xml 159 SHA256 9e7c719a784bb48388c9a12217b85baa75f1b04e9bf049d74b740785fa5006dd SHA512 5ff7b5593ea8976b44c7d63c7cd649f56d649b0d7c4fa5a16bf71ecdf36e40afa8fd9c28df0b8f0c7f9577c47b6ee63d3330f9304d545b46657d6a5f2bfa124a WHIRLPOOL 7ca7b971bad6145bdf2215f73d158f190984644554e8f32132c57c22f1209a5684060661c02e181c135c34c8729d491090ff6d4b23614198e19b9e2deda35a0a
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iJwEAQEIAAYFAlLC3iMACgkQG9wOWsQutdbqZQP+LqrF8sm25y35Sm7wDfMuqv9F
+eE52vGBUK7F60GP00XnSiIQJ27ybr9vUevw83avqrMyQTpUgWUP8K7TznEz/LWer
+8kmZiuhPfqBCQ0XRt+q9PJpb+vTX33vyplidaAskARKj7lIx4rI1qjd67Vq1Fqxq
+AjeX+sAfWQw3+GLqbkI=
+=PNge
+-----END PGP SIGNATURE-----
