@@ -1,6 +1,9 @@
 # ChangeLog for sys-firmware/seabios
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-firmware/seabios/ChangeLog,v 1.24 2013/09/14 10:04:38 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-firmware/seabios/ChangeLog,v 1.25 2013/12/31 15:30:42 floppym Exp $
+
+  31 Dec 2013; Mike Gilbert <floppym@gentoo.org> seabios-1.7.3.ebuild:
+  Don't call python_setup if USE=binary, bug 496590.
 
   14 Sep 2013; Agostino Sarubbo <ago@gentoo.org> seabios-1.7.2.2.ebuild:
   Stable for x86, wrt bug #484686
