@@ -1,6 +1,12 @@
 # ChangeLog for dev-vcs/github-pages-publish
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-vcs/github-pages-publish/ChangeLog,v 1.1 2013/12/31 01:56:03 rafaelmartins Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-vcs/github-pages-publish/ChangeLog,v 1.2 2013/12/31 15:22:27 rafaelmartins Exp $
+
+*github-pages-publish-0.1.1 (31 Dec 2013)
+
+  31 Dec 2013; Rafael G. Martins <rafaelmartins@gentoo.org>
+  +github-pages-publish-0.1.1.ebuild, -github-pages-publish-0.1.ebuild:
+  Version bump.
 
 *github-pages-publish-0.1 (31 Dec 2013)
 
